# voice_server

./: .env.local  Cargo.toml  README.md  clippy.sh
migrations/2023-06-29-052552_cats/: up.sql
migrations/2023-06-30-041301_create_users/: up.sql
migrations/2023-07-01-031601_auths/: up.sql
migrations/2023-07-08-072453_chats/: down.sql  up.sql
migrations/2023-07-19-040739_20230719/: up.sql
migrations/2023-08-04-082412_20230804/: up.sql
migrations/2023-10-14-034806_initial_migration/: up.sql
scripts/: generateModule.sh
scripts/generateModule/: __main__.py  content.py
src/: config.rs  consts.rs  main.rs  schema.rs
src/database/: mod.rs  postgres_pool.rs  process_message_service.rs  redis.rs
src/domains/: mod.rs  services.rs
src/domains/auth/: module.rs
src/domains/auth/controllers/: auth_controller.rs
src/domains/auth/dto/: auth_dto.rs
src/domains/auth/services/: auth_service.rs  jwt_service.rs  mod.rs
src/domains/auth/services/database/: auth_database.rs  mod.rs
src/domains/cat/: mod.rs  module.rs
src/domains/cat/controllers/: cat_controller.rs  mod.rs
src/domains/cat/dto/: cat_dto.rs  mod.rs  new_cat.rs
src/domains/cat/services/: cat_service.rs  mod.rs
src/domains/cat/services/database/: cat_database.rs  mod.rs
src/domains/chat_room/controllers/: chat_room_controller.rs  mod.rs
src/domains/chat_room/dto/: chat_room_dto.rs  chat_room_user_dto.rs  mod.rs
src/domains/chat_room/services/: chat_room_service.rs  chat_room_user_service.rs  mod.rs
src/domains/chat_room/services/database/: chat_room_database.rs  chat_room_user_database.rs  mod.rs
src/domains/message/controllers/: messages_controller.rs  mod.rs
src/domains/message/dto/: message_dto.rs  mod.rs
src/domains/message/services/: message_service.rs  mod.rs
src/domains/message/services/database/: message_database.rs  mod.rs
src/domains/notification/controllers/: notification_controller.rs
src/domains/notification/dto/: mod.rs  notification_dto.rs
src/domains/notification/services/: mod.rs  notification_service.rs
src/domains/notification/services/database/: mod.rs  notification_database.rs
src/domains/user/: mod.rs
src/domains/user/controllers/: mod.rs  user_controllers.rs
src/domains/user/dto/: mod.rs  new_user_dto.rs  user_dto.rs
src/domains/user/services/: mod.rs  user_service.rs
src/domains/user/services/database/: users.rs
src/domains/web_socket/controllers/: mod.rs  web_socket_controller.rs
src/domains/web_socket/dto/: socket_dto.rs
src/domains/web_socket/services/: mod.rs  web_socket_message.rs  web_socket_service.rs
src/errors/: base_error_messages.rs  mod.rs
src/middleware/: auth_middleware.rs  consts.rs  custom_headers.rs  logging.rs  mod.rs
