[package]
name = "voice-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.21.0"
shuttle-runtime = "0.21.0"
tokio = "1.26.0"
tokio-postgres = "0.7.8"
diesel = { version = "2.1.0", features = ["postgres","chrono","numeric","uuid"] }
dotenv = "0.15.0"
serde = "1.0"
serde_derive = "1.0"
chrono = "0.4.26"
serde_json = "1.0"
bcrypt = "0.15.0"
jsonwebtoken = "8.3.0"
futures = "0.3.28"
actix-service = "2.0.2"
env_logger = "0.10.0"
log = "0.4.19"
actix-http = "3.3.1"
futures-util = "0.3.28"
tracing-actix-web = "0.7.5"
actix-cors = "0.6.4"
rustfmt = "0.10.0"
redis = "0.23.0"
openai-rs = "0.1.1"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]


