[package]
name = "voice-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"

tokio = "1.26.0"
tokio-postgres = "0.7.8"
diesel = { version = "2.1.0", features = [
    "postgres",
    "chrono",
    "numeric",
    "uuid",
    "r2d2",
] }
dotenv = "0.15.0"
serde = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4.31", features = ["serde"] }
serde_json = "1.0"
bcrypt = "0.15.0"
jsonwebtoken = "8.3.0"
futures = "0.3.28"
actix-service = "2.0.2"
env_logger = "0.10.0"
log = "0.4.19"
actix-http = "3.3.1"
futures-util = "0.3.28"
tracing-actix-web = "0.7.5"
actix-cors = "0.6.4"
rustfmt = "0.10.0"
redis = "0.23.0"
openai-rs = "0.1.1"
actix-web-actors = "4.2.0"
actix = "0.13.0"
regex = "1.9.1"
actix-rt = "2.8.0"
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "4.0.0", features = ["actix-web"] }
[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]
